--- a/src/components/pages/userList.css
+++ b/src/components/pages/userList.css
@@ -1,6 +1,7 @@
 .user-list {
     list-style: none;
     padding: 0;
+    
 }
 
 .user-item {
@@ -13,3 +14,12 @@
     width: 500px;
     font-size: large;
 }
+
+.userButon {
+    background-color: rgb(160, 181, 203);
+    color: black;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+  }
